[package]
name = "arithmetic_sheets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"] }
tinytemplate = "1.2.1"
