[package]
name = "arithmetic_sheets"
version = "0.1.0"
edition = "2021"
authors = ["Paul Praet"]
license-file = "LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
prettytable-rs = "0.9.0"
rand = "0.8.5"
